force-app/main/default/objects/Incomlend_Custom_Settings__c/Incomlend_Custom_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings to store non-simple-text-field configurations multi-line text etc</description>
    <label>Incomlend Custom Settings</label>
</CustomObject>