force-app/main/default/objects/Incomlend_Custom_Settings__c/fields/Account_For_FX_Contract__c.field-meta.xml
<CustomField>
    <fullName>Account_For_FX_Contract__c</fullName>
    <label>Account For FX Contract</label>
    <length>255</length>
    <type>Text</type>
</CustomField>