force-app/main/default/objects/Incomlend_Custom_Settings__c/fields/Allocation_Required_For_FX_Contract__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Required_For_FX_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allocation Required For FX Contract</label>
    <type>Checkbox</type>
</CustomField>