force-app/main/default/objects/Incomlend_Custom_Settings__c/fields/CapDaysCommission__c.field-meta.xml
<CustomField>
    <fullName>CapDaysCommission__c</fullName>
    <label>CapDaysCommission</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>