force-app/main/default/objects/Incomlend_Custom_Settings__c/fields/CapEarlyPayment__c.field-meta.xml
<CustomField>
    <fullName>CapEarlyPayment__c</fullName>
    <label>CapEarlyPayment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>