force-app/main/default/objects/Incomlend_Custom_Settings__c/fields/CapOverduePayment__c.field-meta.xml
<CustomField>
    <fullName>CapOverduePayment__c</fullName>
    <label>CapOverduePayment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>