force-app/main/default/objects/Incomlend_Custom_Settings__c/fields/FxRate_Email_For_Exception__c.field-meta.xml
<CustomField>
    <fullName>FxRate_Email_For_Exception__c</fullName>
    <label>FxRate Email For Exception</label>
    <length>255</length>
    <type>Text</type>
</CustomField>