force-app/main/default/objects/Incomlend_Custom_Settings__c/fields/Incomlend_Agent_Account__c.field-meta.xml
<CustomField>
    <fullName>Incomlend_Agent_Account__c</fullName>
    <label>Incomlend Agent Account</label>
    <length>20</length>
    <type>Text</type>
</CustomField>