force-app/main/default/objects/Incomlend_Custom_Settings__c/fields/Payment_Info_Amicorp_Escrow__c.field-meta.xml
<CustomField>
    <fullName>Payment_Info_Amicorp_Escrow__c</fullName>
    <label>Payment Info Amicorp Escrow</label>
    <type>TextArea</type>
</CustomField>