force-app/main/default/objects/Incomlend_Custom_Settings__c/fields/Payment_Info_Amicorp_Trust_2__c.field-meta.xml
<CustomField>
    <fullName>Payment_Info_Amicorp_Trust_2__c</fullName>
    <label>Payment Info Amicorp Trust 2</label>
    <type>TextArea</type>
</CustomField>